--- a/sass/responsive/0960.scss
+++ b/sass/responsive/0960.scss
@@ -44,6 +44,13 @@
     }
   }
 
+  .clients {
+    h2 {
+      height: auto;
+      font-size: 28px;
+    }
+  }
+
   .bottom-address {
     width: 90%;
   }
