--- a/sass/responsive/0-374.scss
+++ b/sass/responsive/0-374.scss
@@ -16,6 +16,12 @@
     }
   }
 
+  .content {
+    &:before {
+      top: -30px;
+    }
+  }
+
   .services {
     ul {
       margin-left: 10px;
@@ -60,6 +66,7 @@
   }
 
   .thanks-content {
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
