--- a/sass/responsive/0375.scss
+++ b/sass/responsive/0375.scss
@@ -274,6 +274,7 @@
   }
 
   .thanks-content {
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -281,7 +282,7 @@
     .wrapper {
       display: block;
       vertical-align: inherit;
-      margin-top: 5%;
+      margin-top: 20px;
       width: 90%;
     }
 
