--- a/sass/responsive/0600.scss
+++ b/sass/responsive/0600.scss
@@ -7,6 +7,12 @@
     }
   }
 
+  .content {
+    &:before {
+      top: -30px;
+    }
+  }
+
   .home {
     h2 {
       padding-top: 10px;
@@ -62,6 +68,7 @@
   }
 
   .thanks-content {
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
