--- a/sass/responsive/0768.scss
+++ b/sass/responsive/0768.scss
@@ -45,7 +45,7 @@
 		width: 90%;
 
 		&:before {
-			top: -30px;
+			top: -90px;
 		}
 	}
 
@@ -133,4 +133,8 @@
 			width: 90%;
 		}
 	}
+
+  .thanks-content {
+    margin-top: 80px;
+  }
 }
