--- a/sass/responsive/2600.scss
+++ b/sass/responsive/2600.scss
@@ -1,7 +1,14 @@
 @media (min-width: 2600px) {
+  .content {
+    &:before {
+      top: -60px;
+    }
+  }
+
   .thanks-content {
     .message {
-      margin-top: 100px;
+      margin-top: 50px;
+      margin-bottom: 50px;
       border-radius: 0;
 
       h2 {
