--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,6 +13,7 @@
 @import 'thanks';
 @import 'bottom-address';
 @import 'footer';
+@import 'back-top';
 /* RESPONSIVE */
 @import 'responsive/2600';
 @import 'responsive/1920';
