--- a/sass/responsive/0768.scss
+++ b/sass/responsive/0768.scss
@@ -86,6 +86,7 @@
         padding-left: 20px;
         max-width: 466px;
         width: 100%;
+        box-sizing: border-box;
       }
     }
   }
