--- a/sass/responsive/0768.scss
+++ b/sass/responsive/0768.scss
@@ -1,5 +1,7 @@
 @media (max-width: 959px) {
 	.header {
+    height: 460px;
+
     .top-header {
       top: 0;
       .wrapper {
@@ -10,8 +12,12 @@
     }
 
 		.bottom-header {
-			top: 220px;
+			top: 222px;
 		}
+
+    .bx-wrapper .bx-viewport {
+      height: 179px !important;
+    }
 
 		#logo {
 			padding-top: 10px;
