--- a/sass/responsive/0960.scss
+++ b/sass/responsive/0960.scss
@@ -1,5 +1,7 @@
 @media (min-width: 960px) and (max-width: 1279px) {
   .header {
+    height: 440px;
+
     .top-header {
       .wrapper {
         height: 150px;
