--- a/sass/responsive/1920.scss
+++ b/sass/responsive/1920.scss
@@ -1,4 +1,12 @@
 @media (min-width: 1920px) and (max-width: 2599px) {
+  .header {
+    height: 450px !important;
+
+    .bottom-header {
+      top: 200px !important;
+    }
+  }
+
   .content {
     &:before {
       top: -60px;
