--- a/sass/_carousel.scss
+++ b/sass/_carousel.scss
@@ -1,5 +1,5 @@
 #carousel {
-	width: 740px;
+	width: 988px;
 	margin: auto;
 }
 .bx-wrapper {
@@ -7,6 +7,7 @@
 		background-color: transparent;
 		border: none;
 		box-shadow: none;
+		margin-left: 5px;
 		height: 198px !important;
 	}
 
