--- a/sass/responsive/0375.scss
+++ b/sass/responsive/0375.scss
@@ -48,9 +48,12 @@
       position: relative;
       top: 20px;
 
-      .bx-wrapper .bx-viewport {
-        height: 117px !important;
-        left: 0;
+      .bx-wrapper {
+        .bx-viewport {
+          height: 117px !important;
+          left: 0;
+          margin-left: 0;
+        }
       }
 
       .bx-caption {
@@ -58,7 +61,7 @@
       }
 
       .bx-prev {
-        left: 5px;
+        left: 15px;
       }
 
       .bx-next {
