--- a/sass/responsive/1360.scss
+++ b/sass/responsive/1360.scss
@@ -1,4 +1,15 @@
-@media(min-width: 1440px) and (max-width: 1679px) {
+@media(min-width: 1360px) and (max-width: 1679px) {
+  .header {
+    height: 480px;
+    #carousel {
+      .bx-wrapper {
+        .bx-viewport {
+          height: 250px !important;
+        }
+      }
+    }
+  }
+
 	.content {
     &:before {
       top: -110px;
