--- a/sass/responsive/1890.scss
+++ b/sass/responsive/1890.scss
@@ -1,10 +1,15 @@
 @media (min-width: 1890px) {
 	.header {
 		background-image: url('/images/header-background/header-background-large.jpg');
-		height: 450px;
-		.bottom-header {
-			top: 200px;
-		}
+		height: 480px;
+
+    #carousel {
+      .bx-wrapper {
+        .bx-viewport {
+          height: 250px !important;
+        }
+      }
+    }
 	}
 
 	.content {
